--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           npm install -g yarn
           yarn
-          yarn build:stage
+          yarn build:prod
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.3
