--- a/package.json
+++ b/package.json
@@ -25,54 +25,33 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "@ankr.com/provider": "^4.22.0",
     "@ankr.com/utils": "^1.3.7",
-    "@bitcoin-js/tiny-secp256k1-asmjs": "^2.2.3",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
     "@mui/x-data-grid": "^7.5.0",
     "@reduxjs/toolkit": "^2.2.3",
-    "@tanstack/react-query": "^5.50.1",
-    "async-retry": "^1.3.3",
-    "axios": "^1.6.8",
     "bignumber.js": "^9.1.2",
     "bitcoin-address-validation": "^2.2.3",
-    "bitcoinjs-lib": "^6.1.5",
-    "boring-vault-ui": "^1.6.0",
-    "date-fns": "^3.6.0",
-    "ethers": "^6.13.1",
     "lodash-es": "^4.17.21",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.3",
     "react-intl-universal": "^2.11.1",
-    "react-qrcode-logo": "^2.10.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-typed": "^2.0.12",
     "react-uid": "^2.3.3",
-    "react-window": "^1.8.10",
-    "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
-    "rlp": "^3.0.0",
     "tss-react": "^4.9.6",
-    "vite-plugin-node-polyfills": "^0.21.0",
-    "web3": "^1.10.2",
-    "web3-core": "^1.10.2",
-    "web3-eth-abi": "1.10.4",
-    "web3-eth-contract": "^1.10.2",
-    "web3-utils": "^1.10.2"
+    "vite-plugin-node-polyfills": "^0.21.0"
   },
   "devDependencies": {
-    "@types/async-retry": "^1.4.8",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.2.79",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.2.25",
-    "@types/react-window": "^1.8.8",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "@vitejs/plugin-react": "^4.2.1",
