--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bignumber.js": "^9.1.2",
     "bitcoin-address-validation": "^2.2.3",
     "lodash-es": "^4.17.21",
+    "lottie-web": "^5.12.2",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
