--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-intl-universal": "^2.11.1",
     "react-redux": "^9.1.1",
